[package]
name = "writium-cache"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
keywords = ["writium", "cache"]
license = "MIT"
repository = "https://github.com/PENGUINLIONG/writium-cache"
description = "Common cache system for Writium APIs"

[dependencies]
lru-cache = "0.1"
writium-framework = { version = "0.1", path = "P:/writium-framework" }
